--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -46,6 +46,15 @@
     		<artifactId>lombok</artifactId>
     		<scope>provided</scope>
 		</dependency>	
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>	
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop -->
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>        	
 	</dependencies>
 
 	<build>
